Removed authorize.conf due to default stanza;Removed tgz from repo;Added ReadMe to app

--- a/splunk_pstree_app/default/app.conf
+++ b/splunk_pstree_app/default/app.conf
@@ -1,9 +1,9 @@
 [id]
 name = splunk_pstree_app
-version = 1.0.0
+version = 1.0.1
 
 [launcher]
-version = 1.0.0
+version = 1.0.1
 author = Donald Murchison
 description = Splunk App to implement pstree command
 
@@ -13,4 +13,4 @@ check_for_updates = false
 
 [ui]
 is_visible = 0 
-label = Splunk PSTree App
+label = PSTree for Splunk
