removed default stanza from authorized.conf

--- a/splunk_pstree_app/default/app.conf
+++ b/splunk_pstree_app/default/app.conf
@@ -1,6 +1,6 @@
 [id]
 name = splunk_pstree_app
-version = 1.0.1
+version = 1.0.2
 
 [launcher]
 version = 1.0.1
@@ -9,7 +9,7 @@ description = Splunk App to implement pstree command
 
 [package]
 id = splunk_pstree_app
-check_for_updates = false
+check_for_updates = true
 
 [ui]
 is_visible = 0 
