Added debug line to view how Splunk passes record; Updated readme to address missing fields issue

--- a/splunk_pstree_app/default/commands.conf
+++ b/splunk_pstree_app/default/commands.conf
@@ -1,4 +1,6 @@
 [pstree]
 filename = pstree.py
 chunked=true
-python.version=python3 
+python.version=python3
+supports_getinfo = true
+supports_rawargs = true 
