Added command pstree_v2 which uses iterative algorithm for evaluation

--- a/splunk_pstree_app/default/commands.conf
+++ b/splunk_pstree_app/default/commands.conf
@@ -1,6 +1,9 @@
 [pstree]
 filename = pstree.py
 chunked=true
-python.version=python3
-supports_getinfo = true
-supports_rawargs = true 
+python.version=python3 
+
+[pstree_v2]
+filename = pstree_v2.py
+chunked=true
+python.version=python3 
